--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project</title>
+    <title>Big muscles nutrition</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     
@@ -13,7 +13,7 @@
         <section id="parent">
             <div id="header">
                 <div id="child1">
-                <img src="https://cdn.shopify.com/s/files/1/0291/3743/6771/files/BM-Logo-white.svg?v=1690978648" alt="" >
+                <a href="./index.html"><img src="https://cdn.shopify.com/s/files/1/0291/3743/6771/files/BM-Logo-white.svg?v=1690978648" alt="" ></a>
             </div>
             <div id="child2">
                 <div class="demo">
@@ -31,7 +31,7 @@
                         <option value="Accessories">Accessories</option>
                     </select>
                 </div>
-                <div class="demo"><h3> Fizzy Whey</h3></div>
+                <div class="demo"><a href="./fizzy_whey.html"><h3> Fizzy Whey</h3></a></div>
                 <div class="demo"><h3> Best Sellers</h3></div>
                 <div class="demo">
                     <label for="Authenticate"><h3>Authenticate</h3></label>
@@ -44,6 +44,7 @@
                 <div class="demo"><h3>sell BM</h3></div>
             </div>
             <div id="child3">
+                <i id="menu_icon" class="fa-solid fa-bars"></i>
                 <i class="fa-solid fa-magnifying-glass"></i>
                 <i class="fa-solid fa-person"></i>
                 <i class="fa-solid fa-cart-shopping"></i>
@@ -65,7 +66,7 @@
             <h5>Protein</h5>
         </div>
         <div class="demo1">
-            <img class="demo1ch" src="https://www.bigmusclesnutrition.com/cdn/shop/files/Fizzy-Icon_2_360x.png?v=1747420572" alt="" height="125px" width="125px">
+            <a href="./fizzy_whey.html"><img src="https://www.bigmusclesnutrition.com/cdn/shop/files/Fizzy-Icon_2_360x.png?v=1747420572" alt="" height="125px" width="125px"></a>
             <h5>Fizzy Whey</h5>
         </div>
         <div class="demo1">
@@ -266,7 +267,7 @@
     <br>
    <footer>
     <section id="parent4">
-        <div class="demo5">
+        <div id="Product" class="demo5">
             <h3>Product</h3>
               <br>      
             <p>DEALS OF THE DAY</p>
@@ -281,7 +282,7 @@
             <p>Accessories</p>
         </div>
             <div class="demo5">
-                <h3>EXPLORE</h3><br>
+                <h3 class="caption">EXPLORE</h3><br>
                 <p> News</p>
                 <p>Blogs</p> 
                 <p>About</p>
@@ -289,7 +290,7 @@
                 <p>Our Stor</p> 
             </div>
             <div class="demo5" >
-                <h3>INFORMATION</h3><br>
+                <h3 class="caption">INFORMATION</h3><br>
                 <p>Account Deletion</p>
                 <p>Contact Us</p>
                 <p>Lab reports</p>
@@ -299,7 +300,7 @@
                 <p>Return and Refund</p>
             </div>
             <div class="demo5">
-                <h3>NEWSLETTER</h3><br> 
+                <h3 class="caption">NEWSLETTER</h3><br> 
                 <input type="email" placeholder="email address">
                 <br>
                 <br>
