--- a/fizzy_whey.html
+++ b/fizzy_whey.html
@@ -12,7 +12,7 @@
         <section id="parent">
             <div id="header">
                 <div id="child1">
-                <img src="https://cdn.shopify.com/s/files/1/0291/3743/6771/files/BM-Logo-white.svg?v=1690978648" alt="" >
+               <a href="index.html"><img src="https://cdn.shopify.com/s/files/1/0291/3743/6771/files/BM-Logo-white.svg?v=1690978648" alt="" ></a> 
             </div>
             <div id="child2">
                 <div class="demo">
@@ -58,7 +58,7 @@
     <section id="parent1">
         <div id="parentch">
         <div class="demo1">
-            <img class="demo1ch" src="https://www.bigmusclesnutrition.com/cdn/shop/files/Protein_90846f05-38b0-4311-bc42-bf6b78fb399a_360x.png?v=1725433325" alt="" height="125px" width="125px">
+          <a href="index.html"><img class="demo1ch" src="https://www.bigmusclesnutrition.com/cdn/shop/files/Protein_90846f05-38b0-4311-bc42-bf6b78fb399a_360x.png?v=1725433325" alt="" height="125px" width="125px"></a>  
             <h5>Protein</h5>
         </div>
         <div class="demo1">
