--- a/index.html
+++ b/index.html
@@ -56,13 +56,11 @@
     </header>
 </head>
 <body>
-
-    <a href="./fizzy_whey.html" target="_blank" for="demo1ch"></a>
     
     <section id="parent1">
         <div id="parentch">
         <div class="demo1">
-            <img class="demo1ch" src="https://www.bigmusclesnutrition.com/cdn/shop/files/Protein_90846f05-38b0-4311-bc42-bf6b78fb399a_360x.png?v=1725433325" alt="" height="125px" width="125px">
+            <a href="./index.html"><img class="demo1ch" src="https://www.bigmusclesnutrition.com/cdn/shop/files/Protein_90846f05-38b0-4311-bc42-bf6b78fb399a_360x.png?v=1725433325" alt="" height="125px" width="125px"></a>
             <h5>Protein</h5>
         </div>
         <div class="demo1">
@@ -70,23 +68,23 @@
             <h5>Fizzy Whey</h5>
         </div>
         <div class="demo1">
-            <img class="demo1ch"src="https://www.bigmusclesnutrition.com/cdn/shop/files/offer_360x.png?v=1725609718" alt="" height="125px" width="125px">
+            <a href="./offers.html"><img class="demo1ch"src="https://www.bigmusclesnutrition.com/cdn/shop/files/offer_360x.png?v=1725609718" alt="" height="125px" width="125px"></a>
             <h5>Offers</h5>
         </div>
         <div class="demo1">
-            <img class="demo1ch"src="https://www.bigmusclesnutrition.com/cdn/shop/files/Gainer_4ba3cb5e-5a40-46dc-a7b7-669434d43c3a_360x.png?v=1725433325" alt="" height="125px" width="125px">
+            <a href="./gainer.html"><img class="demo1ch"src="https://www.bigmusclesnutrition.com/cdn/shop/files/Gainer_4ba3cb5e-5a40-46dc-a7b7-669434d43c3a_360x.png?v=1725433325" alt="" height="125px" width="125px"></a>
             <h5>Gainers</h5>
         </div>
         <div class="demo1">
-            <img class="demo1ch"src="https://www.bigmusclesnutrition.com/cdn/shop/files/Amino_d3597bc6-a7f9-474d-9b4b-1312eb39610c_360x.png?v=1725433325" alt="" height="125px" width="125px">
+            <a href="./Amino_Acids.html"><img class="demo1ch"src="https://www.bigmusclesnutrition.com/cdn/shop/files/Amino_d3597bc6-a7f9-474d-9b4b-1312eb39610c_360x.png?v=1725433325" alt="" height="125px" width="125px"></a>
             <h5>Amino Acids</h5>
         </div>
         <div class="demo1">
-            <img class="demo1ch"src="https://www.bigmusclesnutrition.com/cdn/shop/files/Pre-workout_b590820a-14b6-43b4-8357-3dfc1a797bd0_360x.png?v=1725433325" alt=""height="125px" width="125px">
+            <a href="./Pre_Workout.html"><img class="demo1ch"src="https://www.bigmusclesnutrition.com/cdn/shop/files/Pre-workout_b590820a-14b6-43b4-8357-3dfc1a797bd0_360x.png?v=1725433325" alt=""height="125px" width="125px"></a>
             <h5>Pre-Workout</h5>
         </div>
         <div class="demo1">
-            <img class="demo1ch"src="https://www.bigmusclesnutrition.com/cdn/shop/files/BM-WELLNESS_360x.png?v=1740399773" alt=""height="125px" width="125px">
+           <a href="./bm_wellness.html"> <img class="demo1ch"src="https://www.bigmusclesnutrition.com/cdn/shop/files/BM-WELLNESS_360x.png?v=1740399773" alt=""height="125px" width="125px"></a>
             <h5>BM WELLNESS</h5>
         </div>
         </div>
