--- a/Amino_Acids.html
+++ b/Amino_Acids.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+      <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -30,7 +30,7 @@
                         <option value="Accessories">Accessories</option>
                     </select>
                 </div>
-                <div class="demo"><h3> Fizzy Whey</h3></div>
+                <div class="demo"><a href="offers.html"><h3> Fizzy Whey</h3></a></div>
                 <div class="demo"><h3> Best Sellers</h3></div>
                 <div class="demo">
                     <label for="Authenticate"><h3>Authenticate</h3></label>
@@ -89,13 +89,13 @@
     </section>
 
     <div id="demo2">
-        <h1> Fizzy Whey</h1>
+        <h1> AMINO ACIDS </h1>
     </div>
 
     <section id="parent2">
         <div id="parentch1">
             <div>
-                <div class="demo3"><img class="demo3ch" src="img_fizzy/Artboard_1.webp" alt="" height="300px" width="300px"></div>
+                <div class="demo3"><img class="demo3ch" src="img_Amino/1500X1500REALBCAA.webp" alt="" height="300px" width="300px"></div>
                 <div class="price">
                     <p>Premium Gold Whey Protein</p>
                     <h3>₹1,399.00</h3>
@@ -104,7 +104,7 @@
 
             </div>
             <div>
-                <div class="demo3"><img class="demo3ch" src="img_fizzy/Artboard_2_1524x.webp" alt="" height="300px" width="300px"></div>
+                <div class="demo3"><img class="demo3ch" src="img_Amino/2_18d69271-1abb-4b6a-9177-a018deebfc70.webp" alt="" height="300px" width="300px"></div>
                 <div class="price">
                     <p>Gold Whey Isolate</p>
                     <h3>₹1,899.00</h3>
@@ -113,7 +113,7 @@
 
             </div>
             <div>
-                <div class="demo3"><img class="demo3ch" src="img_fizzy/Artboard_2_copy.webp" alt="" height="300px" width="300px"></div>
+                <div class="demo3"><img class="demo3ch" src="img_Amino/Artic-Blast-Front.webp" alt="" height="300px" width="300px"></div>
                 <div class="price">
                     <p>Fizzy Whey + Shaker</p>
                     <h3>₹1,599.00</h3>
@@ -122,7 +122,7 @@
 
             </div>
             <div>
-                <div class="demo3"><img class="demo3ch" src="img_fizzy/Artboard_2_copy_2.webp" alt="" height="300px" width="300px"></div>
+                <div class="demo3"><img class="demo3ch" src="img_Amino/B094W8NM4Y.MAIN.webp" alt="" height="300px" width="300px"></div>
                 <div class="price">
                     <p>Nitra Isolate Whey Protein</p>
                     <h3>₹1,699.00</h3>
@@ -131,7 +131,7 @@
 
             </div>
             <div>
-                <div class="demo3"><img class="demo3ch" src="img_fizzy/Artboard_2_copy_3.webp" alt=""height="300px" width="300px"></div>
+                <div class="demo3"><img class="demo3ch" src="img_Amino/Creatine-Front-Blueberry.webp" alt=""height="300px" width="300px"></div>
                 <div class="price">
                     <p>GOld WHEY ISOLATE + CREATINE </p>
                     <h3>₹1,999.00</h3>
@@ -140,7 +140,7 @@
 
             </div>
             <div>
-                <div class="demo3"><img class="demo3ch" src="img_fizzy/Artboard_2_copy_4.webp" alt=""height="300px" width="300px"></div>
+                <div class="demo3"><img class="demo3ch" src="img_Amino/EAA_Leeche.webp" alt=""height="300px" width="300px"></div>
                 <div class="price">
                     <p> Nitra Isolate +  Creatine</p>
                     <h3>₹1,799.00</h3>
@@ -149,13 +149,14 @@
 
             </div>
             <div>
-                <div class="demo3"><img class="demo3ch" src="img_fizzy/Artboard_2_copy_5_1524x.webp" alt="" height="300px" width="300px"></div>
+                <div class="demo3"><img class="demo3ch" src="img_Amino/Prime-True-vitamin_720x.webp" alt="" height="300px" width="300px"></div>
                 <div class="price">
                     <p> Premium Gold Whey + TSHIRT</p>
                     <h3>₹2,099.00</h3>
                     <button>ADD TO CART</button>
                 </div>
 
+                 
             </div>
         </div>
         
@@ -241,4 +242,4 @@
     </section>
    </footer>
 </body>
-</html>
+</html>  
