--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     </select>
                 </div>
                 <div class="demo"><a href="./fizzy_whey.html"><h3> Fizzy Whey</h3></a></div>
-                <div class="demo"><h3> Best Sellers</h3></div>
+                <div class="demo"><a href="./gainer.html"><h3> Best Sellers</h3></a></div>
                 <div class="demo">
                     <label for="Authenticate"><h3>Authenticate</h3></label>
                     <select name="Authenticate" id="Authenticate">
