--- a/fizzy_whey.html
+++ b/fizzy_whey.html
@@ -31,7 +31,7 @@
                     </select>
                 </div>
                 <div class="demo"><h3> Fizzy Whey</h3></div>
-                <div class="demo"><h3> Best Sellers</h3></div>
+                <div class="demo"><a href="./gainer.html"><h3> Best Sellers</h3></a></div>
                 <div class="demo">
                     <label for="Authenticate"><h3>Authenticate</h3></label>
                     <select name="Authenticate" id="Authenticate">
